Integrate Supabase database for persistent data storage

--- a/index.html
+++ b/index.html
@@ -300,6 +300,9 @@
     <!-- Notification Toast -->
     <div id="toast" class="toast"></div>
 
+    <!-- Supabase Client Library -->
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+
     <script src="app.js"></script>
 </body>
 
