--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
     <div id="toast" class="toast"></div>
 
     <!-- Supabase Client Library -->
-    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.0/dist/umd/supabase.min.js"></script>
 
     <script src="app.js"></script>
 </body>
