Remove red validation border from login form

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <div>กำลังโหลดข้อมูล...</div>
             </div>
 
-            <form id="loginForm" style="display: none;">
+            <form id="loginForm" style="display: none;" novalidate>
                 <div class="form-group">
                     <label>รหัสพนักงาน</label>
                     <input type="text" id="employeeId" placeholder="กรอกรหัสพนักงาน" required>
