Fix manager dashboard and mobile nav

--- a/index.html
+++ b/index.html
@@ -302,6 +302,22 @@
         </div>
     </div>
 
+    <!-- Allocation Result Modal -->
+    <div id="allocationResultModal" class="modal">
+        <div class="modal-content allocation-result-modal">
+            <button class="modal-close" onclick="closeAllocationResultModal()">&times;</button>
+            <div class="modal-header">
+                <h2>ให้คะแนนสำเร็จ</h2>
+            </div>
+            <div class="modal-body" id="allocationResultBody">
+                <!-- Content will be inserted dynamically -->
+            </div>
+            <div class="modal-actions">
+                <button class="btn-primary" onclick="closeAllocationResultModal()">กลับไปหน้าให้คะแนน</button>
+            </div>
+        </div>
+    </div>
+
     <!-- Notification Toast -->
     <div id="toast" class="toast"></div>
 
